--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: MkDocs Build and Deploy to GitHub Pages
 
+permissions:
+  contents: write # This grants write permission for contents of the repository
+
 on:
   push:
     branches: [main] # Or whatever branch contains your MkDocs source
@@ -29,7 +32,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./ # Output directory from MkDocs build
+          publish_dir: ./public # Output directory from MkDocs build
           publish_branch: gh-pages
           force_orphan: true # If gh-pages has existing content you want to overwrite
           user_name: github-actions
